<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_saveImage"
        android:icon="@drawable/ic_save_24"
        android:title="@string/str_saveImage"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_undo"
        android:title="@string/str_undo"
        android:icon="@drawable/ic_baseline_undo_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_reverse"
        android:title="@string/str_reverse"
        android:icon="@drawable/ic_recycle_24"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_showInfo"
        android:title="@string/str_showInfo"
        android:icon="@drawable/ic_info_24"
        app:showAsAction="ifRoom"
        />

</menu>